# clinical-trial-copilot

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  COMPLETED.md  Dockerfile  HANDOFF.md  README.md  TODO.md  clinical-trials-dataset.md  database-connections.md  docker-compose.yml  fly.toml  hackathon-details.md  iPhone.md  latest-plan.md  pyproject.toml  spec.md  visualization.md  why-video-script.md  why.md
.claude/commands/: restart.md
.github/workflows/: ci.yml
backend/: config.py  main.py  session.py  websocket.py
backend/agents/: orchestrator.py
backend/api/: stats.py
backend/mcp_servers/: aact_queries.py  apple_health.py  clinical_trials.py  fda_data.py  geocoding.py
backend/models/: patient.py  session.py  trial.py
backend/report/: generator.py  pdf_generator.py
backend/scripts/: generate_dummy_healthkit.py
demo/: demo_profile.json  demo_profiles.json  demo_script.md
design-system/: DESIGN-SYSTEM.md
docs/: agents-and-phases.md  architecture.md  data-sources.md  tools.md
frontend/: jest.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentActivity.tsx  Chat.tsx  ComparisonTable.tsx  HealthImport.tsx  IntakeWidget.tsx  MessageBubble.tsx  PhasePipeline.tsx  QueryEditor.tsx  ReportViewer.tsx  SessionQR.tsx  SplitHandle.tsx  StatsPanel.tsx  TrialCard.tsx  TrialCarousel.tsx  TrialMap.tsx  TrialMapInner.tsx  TrialSelector.tsx
frontend/e2e/: intake-profile.e2e.test.ts
frontend/lib/: geolocation.ts  (+4 more)
tests/: test_diverse_conditions.py  test_intake_answers.py
(+28 files in other folders)
